22/3/2004:	v2.4.4
	- new boot graphics
	- fixed japanese locale name (#36487)
	- added spanish texts
	- added dutch & hungarian texts
	- localized driver update text

17/3/2004:	v2.4.3
	- new/updated czech texts
	- reworked themes Makefile

16/3/2004:	v2.4.2
	- added german translations

14/4/2004:	v2.4.1
	- created Changelog
	- lang menu build from 'languages' file
	- corrected help text (#35630)
	- added german & slovak translations