@@ -17,6 +17,11 @@
 
   /help.messages .undef def
 
+  translation.texts {
+    translation.texts dup { free } forall free
+    /translation.texts .undef def
+  } if
+
   findtexts
 
   true
@@ -79,4 +84,69 @@
   } forall
 } def
 
+
+% - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+% Translate menu entry.
+%
+% ( text ) ==> ( text )
+%
+/translate {
+  translations.init
+
+  translation.texts length 2 lt { return } if
+
+  0 2 translation.texts length -2 and 1 sub {
+    translation.texts over get 2 index eq {
+      1 add translation.texts exch get exch pop exit
+    } { pop } ifelse 
+  } for
+
+} def
+
+
+% - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+% Read menu translations.
+%
+% ( ) ==> ( )
+%
+/translations.init {
+  translation.texts { return } if
+
+  /translation.texts [ ] def
+
+  config.lang .undef eq { return } if
+
+  tr.tmp .undef eq { /tr.tmp 64 string def } if
+
+  config.lang "translations.%s" tr.tmp sprintf
+
+  tr.tmp findfile dup {
+
+    /la.tmp.datalen over length def
+    /la.tmp.str exch cvs def
+
+    la.tmp.datalen 0 eq { return } if
+    la.tmp.str la.tmp.datalen 1 sub get '\n' ne { return } if
+
+    '\n' seteotchar
+   
+    /translation.texts [
+
+      /la.tmp.len 0 def
+
+      {
+        la.tmp.str la.tmp.len add strdup
+        dup dup length 0 put
+        /la.tmp.len over length 1 add la.tmp.len add def
+
+        la.tmp.len la.tmp.datalen ge { exit } if
+
+      } loop
+
+    ] def
+
+    0 seteotchar
+  } { pop } ifelse
+
+} def
 
