@@ -1,0 +1,5 @@
+/loading_color       0x23449c          newcolor
+/fn_color            0x33449c          newcolor
+/frame_color         0xd0d0ff          newcolor
+/dark_frame_color    0x364c65          newcolor
+/title.bg            0x317db4          newcolor
